# theses-scraper

./: README.md  pyproject.toml
teses_download/: __init__.py  __main__.py  cache.py  download.py
theses_scraper/: __main__.py  downloader.py  pdf_downloader.py  url_fixer.py
theses_scraper/parsers/: __init__.py  cespu.py  dynamic_parser.py  generic.py  maxwell.py  parser.py  selenium_parser.py  sophia.py  ufrr.py
theses_scraper/utils/: http_utils.py  user_agent.py
