[tool.poetry]
name = "teses-download"
version = "0.1.0"
description = ""
authors = ["Jessica Sousa <jessicasousa.pc@gmail.com>"]
readme = "README.md"
packages = [{include = "teses_download"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.31.0"
ray = {version = "2.6.2", extras = ["default"]}
beautifulsoup4 = "4.12.2"
rich = "13.5.2"
tenacity = "8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
