[project]
name = "theses_scraper"
version = "0.1.0"
description = "A simple web scraper for theses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.2",
    "playwright>=1.48.0",
    "selenium>=4.26.0",
    "ua-parser>=0.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
